@@ -61,6 +61,8 @@ public abstract class PigScriptParser
 	
 	abstract protected void quit();
 	
+	abstract protected void printAliases() throws IOException;
+
 	abstract protected void processDescribe(String alias) throws IOException;
 
 	abstract protected void processExplain(String alias) throws IOException;
@@ -132,6 +134,7 @@ TOKEN: {<COPYFROMLOCAL: "copyFromLocal">}
 TOKEN: {<COPYTOLOCAL: "copyToLocal">}
 TOKEN: {<DUMP: "dump">}
 TOKEN: {<DESCRIBE: "describe">}
+TOKEN: {<ALIASES: "aliases">}
 TOKEN: {<EXPLAIN: "explain">}
 TOKEN: {<HELP: "help">}
 TOKEN: {<KILL: "kill">}
@@ -396,8 +399,15 @@ void parse() throws IOException:
 	{processIllustrate(t1.image);}
 	|
 	<DESCRIBE>
+	(
 	t1 = <IDENTIFIER>
 	{processDescribe(t1.image);}
+	|
+		{processDescribe(null);}
+	)
+	|
+	<ALIASES>
+	{printAliases();}
 	|
     <EXPLAIN>
 	t1 = <IDENTIFIER>
@@ -567,6 +577,8 @@ Token GetReserved () :
 	t = <DUMP>
 	|
 	t = <DESCRIBE>
+	|
+	t = <ALIASES>
 	|
 	t = <EXPLAIN>
 	|
